--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
-    <link rel="stylesheet" type="text/css" href="teststyle.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
   </head>
   <body>
@@ -33,7 +33,7 @@
           <div class = "journals firstLineJournals" id = "endjournal"></div>
           
       </div>
-    <script src="testsketch.js"></script>
-       
+    <!--<script src="sketch.js"></script>
+    -->
   </body>
 </html>
