--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1 id="headline">DAESHIN PLANNER</h1>
+    <a href="/login"><h1 id="headline">DAESHIN PLANNER</h1></a>
     <div id="under"></div>
     <form id="loginForm" action="/login" method="POST">
-      <label class="loginLabel">아이디: <input type="text" id="username" class="textBox" name="username"></label>
-      <label class="loginLabel">비밀번호: <input type="password" id="password" class="textBox" name="password"></label>
+      <label class="loginLabel">아이디:&nbsp;&nbsp;&nbsp;<input type="text" id="username" class="textBox" name="username"></label>
+      <label class="loginLabel">비밀번호:&nbsp;&nbsp;&nbsp;<input type="password" id="password" class="textBox" name="password"></label>
       <input type="submit" id="loginButton" class="login" value="LOGIN">
+      <p id="wrongSign">없음</p>
     </form>
-    <!--<script src="sketch.js"></script>-->
   </body>
 </html>
